eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: nginx
spec:
    controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: simple-bank-ingress
spec:
    ingressClassName: nginx
    rules:
        - host: "a0651ab792ec64df3bc2e37e196c37c7-356683445.ap-southeast-1.elb.amazonaws.com"
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: simple-bank-api-service
                            port:
                                number: 80
